# FizzleFramework

./: .gitignore  CMakeLists.txt  build.fish  drmemory.bat  source.c
assets/: tf.fnt  tf_0.tga
include/: Color.h  Game.h  Window.h
include/Content/: Asset.h  ContentManager.h  SpriteFont.h  Texture.h  TypedAsset.h
include/Core/: Application.h  AssetManager.h  Ball.h  Game.h  GameTime.h  Input.h  InputManager.h  Logger.h  Paddle.h  Rectangle.h  Texture.h
include/Game/: Game1.h
include/Graphics/: Color.h  Font.h  GraphicsDeviceManager.h  Renderer.h  SpriteBatch.h  Window.h
include/Scene/: Menu.h  Scene.h  SceneManager.h
include/Scenes/: GameScene.h  LoadingScene.h  MenuScene.h  Scene.h  SceneManager.h
include/Threading/: Job.h  JobSystem.h
src/: Renderer.cpp  Window.cpp  source.cpp
src/Content/: ContentManager.cpp  SpriteFont.cpp  Texture.cpp
src/Core/: Application.c  AssetManager.c  Game.cpp  GameTime.cpp  Input.c  InputManager.cpp  Logger.c  Texture.c
src/Core/Scene/: Menu.c  SceneManager.c
src/Game/: Game1.cpp  source.cpp
src/Graphics/: Font.cpp  GraphicsDeviceManager.cpp  Renderer.cpp  SpriteBatch.cpp  Window.cpp
src/Scenes/: GameScene.cpp  LoadingScene.cpp  MenuScene.cpp  SceneManager.cpp
src/Threading/: JobSystem.cpp
